[gd_scene load_steps=9 format=3 uid="uid://7u5tog6k4j5t"]

[ext_resource type="Script" path="res://scenes/enviroment/player/player.gd" id="1_hohw5"]
[ext_resource type="Texture2D" uid="uid://j3cegi3cduwa" path="res://scenes/enviroment/player/player.png" id="1_ug2em"]
[ext_resource type="PackedScene" uid="uid://dllayro17g0qh" path="res://scenes/controller/sword_ability_controller/sword_ability_controller.tscn" id="2_30pv4"]
[ext_resource type="Script" path="res://scenes/component/health_component/health_component.gd" id="2_bro86"]
[ext_resource type="PackedScene" uid="uid://rd76pobs5q3e" path="res://scenes/ability/sword_ability/sword_ability.tscn" id="3_lkvm1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uc6jv"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uypjw"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k1m3r"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_hohw5")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_bro86")
max_health = 10.0

[node name="AbilityManager" type="Node" parent="."]

[node name="SwordAbilityController" parent="AbilityManager" instance=ExtResource("2_30pv4")]
sword_ability = ExtResource("3_lkvm1")

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_uc6jv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ug2em")
offset = Vector2(0, -8)

[node name="HurtboxArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_uypjw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_k1m3r")
